parser/CalParser.py
# Generated from Cal.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class CalParser ( Parser ):

    grammarFileName = "Cal.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "';'", "'('", "')'", "'*'", "'/'", 
                     "'**'", "'%'", "'+'", "'-'", "','", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'MOD'", "'ADD'", "'SUB'", "'MUL'", "'DIV'", 
                     "'POW'", "'='", "'*='", "'/='", "'+='", "'-='", "'%='", 
                     "'**='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "DIGIT", "NON_DIGIT", "VAR_CHAR", "MOD", "ADD", "SUB", 
                      "MUL", "DIV", "POW", "VAR_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
                      "ADD_ASSIGN", "SUB_ASSIGN", "MOD_ASSIGN", "POW_ASSIGN", 
                      "WS" ]

    RULE_integerLiteral = 0
    RULE_floatLiteral = 1
    RULE_decimalLiteral = 2
    RULE_calculator = 3
    RULE_expressionStatement = 4
    RULE_expression = 5
    RULE_firstPrecedenceMathOperator = 6
    RULE_secondPrecedenceMathOperator = 7
    RULE_funcCall = 8
    RULE_functionArgs = 9
    RULE_identifier = 10
    RULE_sign = 11
    RULE_firstMathOperator = 12
    RULE_secondMathOperator = 13
    RULE_assign = 14

    ruleNames =  [ "integerLiteral", "floatLiteral", "decimalLiteral", "calculator", 
                   "expressionStatement", "expression", "firstPrecedenceMathOperator", 
                   "secondPrecedenceMathOperator", "funcCall", "functionArgs", 
                   "identifier", "sign", "firstMathOperator", "secondMathOperator", 
                   "assign" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    DIGIT=12
    NON_DIGIT=13
    VAR_CHAR=14
    MOD=15
    ADD=16
    SUB=17
    MUL=18
    DIV=19
    POW=20
    VAR_ASSIGN=21
    MUL_ASSIGN=22
    DIV_ASSIGN=23
    ADD_ASSIGN=24
    SUB_ASSIGN=25
    MOD_ASSIGN=26
    POW_ASSIGN=27
    WS=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class IntegerLiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(CalParser.DIGIT)
            else:
                return self.getToken(CalParser.DIGIT, i)

        def getRuleIndex(self):
            return CalParser.RULE_integerLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntegerLiteral" ):
                listener.enterIntegerLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntegerLiteral" ):
                listener.exitIntegerLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntegerLiteral" ):
                return visitor.visitIntegerLiteral(self)
            else:
                return visitor.visitChildren(self)




    def integerLiteral(self):

        localctx = CalParser.IntegerLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_integerLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 30
                    self.match(CalParser.DIGIT)

                else:
                    raise NoViableAltException(self)
                self.state = 33 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FloatLiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(CalParser.DIGIT)
            else:
                return self.getToken(CalParser.DIGIT, i)

        def getRuleIndex(self):
            return CalParser.RULE_floatLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloatLiteral" ):
                listener.enterFloatLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloatLiteral" ):
                listener.exitFloatLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloatLiteral" ):
                return visitor.visitFloatLiteral(self)
            else:
                return visitor.visitChildren(self)




    def floatLiteral(self):

        localctx = CalParser.FloatLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_floatLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(CalParser.DIGIT)
            self.state = 36
            self.match(CalParser.T__0)
            self.state = 37
            self.match(CalParser.DIGIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DecimalLiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def integerLiteral(self):
            return self.getTypedRuleContext(CalParser.IntegerLiteralContext,0)


        def floatLiteral(self):
            return self.getTypedRuleContext(CalParser.FloatLiteralContext,0)


        def getRuleIndex(self):
            return CalParser.RULE_decimalLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecimalLiteral" ):
                listener.enterDecimalLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecimalLiteral" ):
                listener.exitDecimalLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecimalLiteral" ):
                return visitor.visitDecimalLiteral(self)
            else:
                return visitor.visitChildren(self)




    def decimalLiteral(self):

        localctx = CalParser.DecimalLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decimalLiteral)
        try:
            self.state = 41
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.integerLiteral()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.floatLiteral()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CalculatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CalParser.EOF, 0)

        def expressionStatement(self):
            return self.getTypedRuleContext(CalParser.ExpressionStatementContext,0)


        def getRuleIndex(self):
            return CalParser.RULE_calculator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCalculator" ):
                listener.enterCalculator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCalculator" ):
                listener.exitCalculator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCalculator" ):
                return visitor.visitCalculator(self)
            else:
                return visitor.visitChildren(self)




    def calculator(self):

        localctx = CalParser.CalculatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_calculator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CalParser.T__2) | (1 << CalParser.T__8) | (1 << CalParser.T__9) | (1 << CalParser.DIGIT) | (1 << CalParser.NON_DIGIT))) != 0):
                self.state = 43
                self.expressionStatement()


            self.state = 46
            self.match(CalParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CalParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CalParser.ExpressionContext,i)


        def getRuleIndex(self):
            return CalParser.RULE_expressionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStatement" ):
                listener.enterExpressionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStatement" ):
                listener.exitExpressionStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionStatement" ):
                return visitor.visitExpressionStatement(self)
            else:
                return visitor.visitChildren(self)




    def expressionStatement(self):

        localctx = CalParser.ExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expressionStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.expression(0)
            self.state = 53
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 49
                    self.match(CalParser.T__1)
                    self.state = 50
                    self.expression(0) 
                self.state = 55
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CalParser.T__1:
                self.state = 56
                self.match(CalParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CalParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class SignedExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def sign(self):
            return self.getTypedRuleContext(CalParser.SignContext,0)

        def expression(self):
            return self.getTypedRuleContext(CalParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSignedExpression" ):
                listener.enterSignedExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSignedExpression" ):
                listener.exitSignedExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSignedExpression" ):
                return visitor.visitSignedExpression(self)
            else:
                return visitor.visitChildren(self)


    class FpMathOperatorExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CalParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CalParser.ExpressionContext,i)

        def firstPrecedenceMathOperator(self):
            return self.getTypedRuleContext(CalParser.FirstPrecedenceMathOperatorContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFpMathOperatorExpression" ):
                listener.enterFpMathOperatorExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFpMathOperatorExpression" ):
                listener.exitFpMathOperatorExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFpMathOperatorExpression" ):
                return visitor.visitFpMathOperatorExpression(self)
            else:
                return visitor.visitChildren(self)


    class AssignExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(CalParser.IdentifierContext,0)

        def assign(self):
            return self.getTypedRuleContext(CalParser.AssignContext,0)

        def expression(self):
            return self.getTypedRuleContext(CalParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignExpression" ):
                listener.enterAssignExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignExpression" ):
                listener.exitAssignExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignExpression" ):
                return visitor.visitAssignExpression(self)
            else:
                return visitor.visitChildren(self)


    class IdentifierExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(CalParser.IdentifierContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifierExpression" ):
                listener.enterIdentifierExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifierExpression" ):
                listener.exitIdentifierExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifierExpression" ):
                return visitor.visitIdentifierExpression(self)
            else:
                return visitor.visitChildren(self)


    class FunctionCallExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funcCall(self):
            return self.getTypedRuleContext(CalParser.FuncCallContext,0)

        def functionArgs(self):
            return self.getTypedRuleContext(CalParser.FunctionArgsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCallExpression" ):
                listener.enterFunctionCallExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCallExpression" ):
                listener.exitFunctionCallExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCallExpression" ):
                return visitor.visitFunctionCallExpression(self)
            else:
                return visitor.visitChildren(self)


    class LiteralExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def decimalLiteral(self):
            return self.getTypedRuleContext(CalParser.DecimalLiteralContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteralExpression" ):
                listener.enterLiteralExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteralExpression" ):
                listener.exitLiteralExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteralExpression" ):
                return visitor.visitLiteralExpression(self)
            else:
                return visitor.visitChildren(self)


    class SpMathOperatorExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CalParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CalParser.ExpressionContext,i)

        def secondPrecedenceMathOperator(self):
            return self.getTypedRuleContext(CalParser.SecondPrecedenceMathOperatorContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpMathOperatorExpression" ):
                listener.enterSpMathOperatorExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpMathOperatorExpression" ):
                listener.exitSpMathOperatorExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpMathOperatorExpression" ):
                return visitor.visitSpMathOperatorExpression(self)
            else:
                return visitor.visitChildren(self)


    class ParentExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(CalParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParentExpression" ):
                listener.enterParentExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParentExpression" ):
                listener.exitParentExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParentExpression" ):
                return visitor.visitParentExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CalParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = CalParser.SignedExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 60
                self.sign()
                self.state = 61
                self.expression(8)
                pass

            elif la_ == 2:
                localctx = CalParser.ParentExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 63
                self.match(CalParser.T__2)
                self.state = 64
                self.expression(0)
                self.state = 65
                self.match(CalParser.T__3)
                pass

            elif la_ == 3:
                localctx = CalParser.AssignExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 67
                self.identifier()
                self.state = 68
                self.assign()
                self.state = 69
                self.expression(4)
                pass

            elif la_ == 4:
                localctx = CalParser.FunctionCallExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 71
                self.funcCall()
                self.state = 72
                self.match(CalParser.T__2)
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CalParser.T__2) | (1 << CalParser.T__8) | (1 << CalParser.T__9) | (1 << CalParser.DIGIT) | (1 << CalParser.NON_DIGIT))) != 0):
                    self.state = 73
                    self.functionArgs()


                self.state = 76
                self.match(CalParser.T__3)
                pass

            elif la_ == 5:
                localctx = CalParser.LiteralExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 78
                self.decimalLiteral()
                pass

            elif la_ == 6:
                localctx = CalParser.IdentifierExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 79
                self.identifier()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 92
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 90
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = CalParser.FpMathOperatorExpressionContext(self, CalParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 82
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 83
                        self.firstPrecedenceMathOperator()
                        self.state = 84
                        self.expression(7)
                        pass

                    elif la_ == 2:
                        localctx = CalParser.SpMathOperatorExpressionContext(self, CalParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 86
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 87
                        self.secondPrecedenceMathOperator()
                        self.state = 88
                        self.expression(6)
                        pass

             
                self.state = 94
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class FirstPrecedenceMathOperatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POW(self):
            return self.getToken(CalParser.POW, 0)

        def MUL(self):
            return self.getToken(CalParser.MUL, 0)

        def DIV(self):
            return self.getToken(CalParser.DIV, 0)

        def MOD(self):
            return self.getToken(CalParser.MOD, 0)

        def getRuleIndex(self):
            return CalParser.RULE_firstPrecedenceMathOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFirstPrecedenceMathOperator" ):
                listener.enterFirstPrecedenceMathOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFirstPrecedenceMathOperator" ):
                listener.exitFirstPrecedenceMathOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFirstPrecedenceMathOperator" ):
                return visitor.visitFirstPrecedenceMathOperator(self)
            else:
                return visitor.visitChildren(self)




    def firstPrecedenceMathOperator(self):

        localctx = CalParser.FirstPrecedenceMathOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_firstPrecedenceMathOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CalParser.T__4) | (1 << CalParser.T__5) | (1 << CalParser.T__6) | (1 << CalParser.T__7) | (1 << CalParser.MOD) | (1 << CalParser.MUL) | (1 << CalParser.DIV) | (1 << CalParser.POW))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SecondPrecedenceMathOperatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADD(self):
            return self.getToken(CalParser.ADD, 0)

        def SUB(self):
            return self.getToken(CalParser.SUB, 0)

        def getRuleIndex(self):
            return CalParser.RULE_secondPrecedenceMathOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSecondPrecedenceMathOperator" ):
                listener.enterSecondPrecedenceMathOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSecondPrecedenceMathOperator" ):
                listener.exitSecondPrecedenceMathOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSecondPrecedenceMathOperator" ):
                return visitor.visitSecondPrecedenceMathOperator(self)
            else:
                return visitor.visitChildren(self)




    def secondPrecedenceMathOperator(self):

        localctx = CalParser.SecondPrecedenceMathOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_secondPrecedenceMathOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CalParser.T__8) | (1 << CalParser.T__9) | (1 << CalParser.ADD) | (1 << CalParser.SUB))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncCallContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NON_DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(CalParser.NON_DIGIT)
            else:
                return self.getToken(CalParser.NON_DIGIT, i)

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(CalParser.DIGIT)
            else:
                return self.getToken(CalParser.DIGIT, i)

        def getRuleIndex(self):
            return CalParser.RULE_funcCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncCall" ):
                listener.enterFuncCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncCall" ):
                listener.exitFuncCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncCall" ):
                return visitor.visitFuncCall(self)
            else:
                return visitor.visitChildren(self)




    def funcCall(self):

        localctx = CalParser.FuncCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(CalParser.NON_DIGIT)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CalParser.DIGIT or _la==CalParser.NON_DIGIT:
                self.state = 100
                _la = self._input.LA(1)
                if not(_la==CalParser.DIGIT or _la==CalParser.NON_DIGIT):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionArgsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CalParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CalParser.ExpressionContext,i)


        def getRuleIndex(self):
            return CalParser.RULE_functionArgs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionArgs" ):
                listener.enterFunctionArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionArgs" ):
                listener.exitFunctionArgs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionArgs" ):
                return visitor.visitFunctionArgs(self)
            else:
                return visitor.visitChildren(self)




    def functionArgs(self):

        localctx = CalParser.FunctionArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_functionArgs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.expression(0)
            self.state = 111
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 107
                    self.match(CalParser.T__10)
                    self.state = 108
                    self.expression(0) 
                self.state = 113
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CalParser.T__10:
                self.state = 114
                self.match(CalParser.T__10)

